--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,3 @@
 body {background:url(../images/back.png);}
 h1 {text-align:center;font-family:'Tangerine',cursive;font-size:108px;text-shadow:1px 1px 3px rgba(255,255,255,0.5);}
+[rel="me"] {position:fixed;bottom:0;left:50%;opacity:0}
